# graphmage

./: .gitignore  Cargo.toml  LICENSE_APACHE  README.md
crates/cli/: Cargo.toml
crates/cli/src/: README.md
crates/format/: Cargo.toml  README.md
crates/graph/: Cargo.toml  README.md
crates/graph/src/: edge.rs  lib.rs  node.rs  property.rs
crates/render/: Cargo.toml  README.md
crates/render/src/: context.rs  lib.rs
crates/render/src/shapes/: ellipse.rs  line.rs  mod.rs
crates/viewer/: Cargo.toml  README.md
crates/viewer/src/: main.rs  window.rs
doc/: group.md  property.md  wip.gmg
