[package]
name = "graphmage-graph"
edition = "2021"
version.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generational-arena = "0.2.9"

glam = "0.24"

phf = { version = "0.11", features = ["macros"] }
paste = "1.0"
