[package]
name = "graphmage-render"
edition = "2021"
version.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
graphmage-graph = { path = "../graph" }

glam = "0.24"

# Rendering
femtovg = "0.7.1"
glutin = "0.31.0"
glutin-winit = "0.4.2"
winit = { version = "0.29.2", default-features = false, features = [
    "rwh_05",
    "x11",
    "wayland",
    "wayland-dlopen",
    "wayland-csd-adwaita",
] }
raw-window-handle = "0.5.2" # glutin
